--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -415,6 +415,7 @@ jobs:
             redis \
             supertokens \
             local_cdn \
+            local_proxy \
             external_composition
 
       - name: Set up Docker Buildx
