--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -143,6 +143,29 @@ services:
       PORT: 3004
       CDN_AUTH_PRIVATE_KEY: 1e1064ef9cda8bf38936b77317e90dc3
 
+  local_proxy:
+    image: node:16.13.2-alpine3.14
+    entrypoint:
+      - '/bin/sh'
+      - '/run-local-proxy.sh'
+    networks:
+      - 'stack'
+    healthcheck:
+      test: ['CMD', 'wget', '--spider', '-q', 'localhost:3013/_readiness']
+      interval: 5s
+      timeout: 5s
+      retries: 6
+      start_period: 5s
+    ports:
+      - 3013:3013
+    volumes:
+      - '../packages/services/proxy-worker/dist/dev.js:/proxy.js'
+      - './run-local-proxy.sh:/run-local-proxy.sh'
+    environment:
+      NODE_ENV: production
+      PORT: 3013
+      CF_PROXY_SIGNATURE: secretSignature
+
   external_composition:
     image: node:16.13.2-alpine3.14
     entrypoint:
@@ -219,6 +242,8 @@ services:
         condition: service_healthy
       local_cdn:
         condition: service_healthy
+      local_proxy:
+        condition: service_healthy
     ports:
       - 3001:3001
     environment:
@@ -244,6 +269,9 @@ services:
       RATE_LIMIT_ENDPOINT: http://rate-limit:3009
       BILLING_ENDPOINT: http://stripe-billing:3010
       EMAILS_ENDPOINT: http://emails:3011
+      REQUEST_PROXY: '1'
+      REQUEST_PROXY_SIGNATURE: 'secretSignature'
+      REQUEST_PROXY_ENDPOINT: 'http://local_proxy:3013'
       CDN: '1'
       CDN_CF_BASE_PATH: http://local_cdn:3004
       CDN_CF_ACCOUNT_ID: 103df45224310d669213971ce28b5b70
@@ -305,6 +333,8 @@ services:
     depends_on:
       redis:
         condition: service_healthy
+      local_proxy:
+        condition: service_healthy
     ports:
       - 3005:3005
     environment:
@@ -314,6 +344,9 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       REDIS_PASSWORD: test
+      REQUEST_PROXY: '1'
+      REQUEST_PROXY_SIGNATURE: 'secretSignature'
+      REQUEST_PROXY_ENDPOINT: 'http://local_proxy:3013'
 
   emails:
     image: '${DOCKER_REGISTRY}emails${DOCKER_TAG}'
